To ensure its always visible

--- a/styles/global.css
+++ b/styles/global.css
@@ -71,6 +71,7 @@ h1 {
   -webkit-text-stroke: var(--primary) 1px;
   padding: 1rem 0;
   white-space: nowrap;
+  font-display: swap;
 }
 
 /* Page specific titles */
